--- a/view/index.html
+++ b/view/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mockup</title>
+    <title>AC Pesquisa</title>
     <link rel="stylesheet" href="../public/stylesheets/style.css">
 </head>
 
-<div class=" bg-blue ">
+<header class=" header-container">
+
     <div class="collapse" id="menu">
 
         <ul class="nav">
@@ -33,13 +34,13 @@
     </div>
 
 
-    <nav class="navbar  ">
+    <nav class="navbar">
         <a href="#">
             <i class="logo">
                 <img src="/public/images/logo-acpesquisa-web.png">
             </i>
         </a>
-        <button class="hamburger" type="button" data-toggle="collapse" data-target="#menu"
+        <button class="btn-nav" type="button" data-toggle="collapse" data-target="#menu"
             aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
 
             <i class="list">
@@ -51,17 +52,13 @@
     </nav>
 
 
-</div>
+</header>
 
 
 <body>
     <div class="background-blue">
         
-        <div class="img-teste">
-        <img src="../public/images/imagem-banner.png" width="400px" height="400px" alt="">
-        </div>
-
-        <div class="teste">
+        <div class="container-first">
         <h2>Isso é AC!</h2>
 
         <p>
@@ -73,6 +70,11 @@
         <button class="btn-blue">
             <b>SAIBA MAIS</b>
         </button> 
+
+        <div class="img-container-first">
+            <img src="../public/images/imagem-banner.png" width="400px" height="400px" alt="">
+            </div>
+    
     </div>
 
 
@@ -115,7 +117,7 @@
 
     <article class="middle-photo">
         <h2>E essa é apenas a base</h2>
-        <img src="../public/images/img-5-5.png">
+        <img src="../public/images/img-5.png">
 
         <p>
             Focamos na criatividade e mesclamos todos os tipos de ferramentas e mídias em um único estudo, ou seja, são números, cruzados com opiniões, imagens, mapas, áudios e vídeos.
