--- a/view/index.html
+++ b/view/index.html
@@ -10,7 +10,7 @@
 
 <header class=" header-container">
 
-    <div class="collapse" id="menu">
+    <div class="menu-content" id="menu">
 
         <ul class="nav">
             <li>
@@ -72,7 +72,7 @@
         </button> 
 
         <div class="img-container-first">
-            <img src="../public/images/imagem-banner.png" width="400px" height="400px" alt="">
+            <img src="../public/images/banner-home.png" width="400px" height="400px" alt="">
             </div>
     
     </div>
@@ -82,17 +82,19 @@
     <article class="container-base">
         <h2>Suas dúvidas acabam agora...</h2>
 
-        <p>
+        <p class="content-container">
             A base de nossa atuação é bastante conhecida:
             ferramentas de pesquisas Qualitativas, Quantitativas e Geomarketing
         </p>
+
+        <div class="container-card">
 
         <div class="card">
             <img src="../public/images/icone-2.png" width="80px" height="auto" alt="Quantitativas">
             <h3>Quantitativas</h3>
             <p>
                 Estudos online, face 2 face e telefônicos. Nesta modalidade o foco é sempre quantificar os resultados, isto é, percentualizar e com base em
-                metodololgias estatísticas, gerar resultados e criar insights.
+                metodololgias <b>estatísticas, gerar</b> resultados e criar insights.
             </p>
         </div>
         
@@ -101,7 +103,7 @@
             <h3>Qualitativas</h3>
             <p>
                Nesta modadalidade, o foco é a profundidade das informações, não buscamos qual o percentual de respostas, mas sim a maior riqueza de detalhes em cada uma delas.
-               Sejam entrevistas em profundidade ou grupos de discussão, aqui o foco é a riqueza de detalhes.
+               Sejam <b>entrevistas em</b> profundidade ou grupos de discussão, aqui o foco é a riqueza de detalhes.
             </p>
         </div>
         
@@ -109,16 +111,18 @@
             <img src="../public/images/icone-3.png" width="80px" height="auto" alt="Geomarketing">
             <h3>Geomarketing</h3>
             <p>
-                Oferecemos todas as metodologias relacionadas aos modelos de Geomarketing: Delimitação de áres de influência com base nas isócronas, contagem de fluxo, levantamento
-                de oferta concorrente, levantamento de ABL, estimativas de potencias de consumo e levantamento completo de dados secundários.
+                Oferecemos todas as metodologias relacionadas aos modelos de Geomarketing: Delimitação de áres de influência com base nas isócronas, contagem de fluxo, <b>levantamento
+                de oferta</b> concorrente, levantamento de ABL, estimativas de potencias de consumo e levantamento completo de dados secundários.
             </p>
         </div>
+    </div>
     </article>
 
     <article class="middle-photo">
         <h2>E essa é apenas a base</h2>
         <img src="../public/images/img-5.png">
 
+        <div class="middle-content">
         <p>
             Focamos na criatividade e mesclamos todos os tipos de ferramentas e mídias em um único estudo, ou seja, são números, cruzados com opiniões, imagens, mapas, áudios e vídeos.
         </p>
@@ -136,6 +140,7 @@
             <p><b>Você sabe exatamente como estão os seus processos de vendas?</b></p> 
             <p><b>As melhorias estão sendo percebidas?</b></p> 
         </p>
+    </div>
         <button class="btn-blue-center">
             <b>SAIBA MAIS</b>
         </button>
