--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -91,7 +91,7 @@ article{
 .btn-blue {
     color: #fff;
     background-color: rgb(5,72,103);
-    padding: 7px 30px;
+    padding: 7px 50px;
     border-radius: 4px;
     border: none;
     position: relative;
@@ -134,6 +134,8 @@ article{
 .container-base p{
     text-align: center;
 }
+
+/* MIDDLE PHOTO */
 
 .middle-photo{
     margin-left: 15px;
@@ -285,5 +287,82 @@ footer h2 {
 @media screen and (min-width:994px) {
 
 
-    
+    /* HEADER */
+.list{
+    display: none;
+}
+
+.menu-content{
+    float: right;
+
+}
+
+.nav li > a {
+    color: white;
+}
+
+/* PRIMEIRO BLOCO DESK */
+
+.container-first{
+
+}
+
+.container-first p{
+    width: 400px;
+}
+
+.img-container-first{
+max-width: 100vh;
+}
+
+.btn-blue{
+    margin-left: 6rem;
+}
+
+/* GRAFICOS */
+
+.content-container{
+margin: 0px 150px;
+}
+
+/* CARD */
+
+.container-card{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+/* MIDDLE PHOTO */
+
+.middle-photo{
+display: inline-block;
+}
+
+.middle-photo img{
+    display: flex;
+    position: absolute;
+    transform: translate(120%, 0px);
+    max-height: 100%;
+    height: 88%;
+    width: 35%;
+}
+
+.middle-photo h2{
+    text-align: center;
+    padding: 15px 0px;
+}
+
+.middle-photo p{
+    text-align: left;
+}
+
+.middle-content{
+    width: 25rem;
+    margin-left: 50px;
+}
+
+.btn-blue-center{
+    margin-top: 20px;
+    padding: 7px 70px;
+}
 }
