--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,44 @@ article{
 }
 
    /* Nav */
+
+   .nav-button{
+    background-color: transparent;
+    border: none;
+   }
+
+  input, ul.submenu {
+    display: none;
+    list-style:none;
+    text-decoration: none;
+    font-weight: bolder;
+    margin-top: 15px;
+    
+  }
+  
+  /*position the label*/
+  label {
+    position: relative;
+    display: block;
+    cursor: pointer;
+    width: 100px;
+    color: white;
+    font-weight: bolder;
+
+}
+  
+  input:checked~ul.submenu {
+    display: block;
+    position: absolute;
+    z-index: 50;
+    
+  }
+
+  .submenu li{
+      
+  }
+
+
    .header-container {
     background-image: linear-gradient(to bottom, #132433, #2571ae, #2571ae);
   }
@@ -49,6 +87,8 @@ article{
     max-width: 200px;
   }
 
+
+
 /* IMAGE HEADER */
 
 .background-blue{
@@ -67,7 +107,7 @@ article{
 }
 
 .img-container-first img{
-    transform: translate(-20%, 26px);
+    transform: translate(-10%, 26px);
     position: absolute;
     z-index: -1;
 }
