--- a/view/index.html
+++ b/view/index.html
@@ -54,7 +54,7 @@
 
 
     <div class="background-blue">
-        
+
         <!-- <div class="container-first"> -->
         <h2>Isso é AC!</h2>
 
@@ -116,7 +116,7 @@
 
     <article class="middle-photo">
         <h2>E essa é apenas a base</h2>
-        <img src="../public/images/img-5.png">
+        <img src="../public/images/base-image-home.png">
 
         <div class="middle-content">
         <p>
@@ -148,7 +148,7 @@
 
           <dt class="blog-title">E todo mundo virou Instituto de pesquisa</dt>
 
-          <div class="footer-card">
+          <div class="content-footer">
 
             <button type="button">
             </button>
@@ -207,10 +207,6 @@
         </dl>
       </section>
 
-
-
-
-
  
     </section>
 
@@ -236,14 +232,14 @@
     </article>
 
 
-    <footer >
+    <footer>
         <div class="logo-reserved">
             <img class="logo-footer" src="../public/images/logo-footer.png" alt="logo-footer" />
             <h6 class="reserved">©️ 2021 AC Pesquisa - All Rights Reserved</h6>
           </div>
     
           <div class="link-footer">
-            <ul >
+            <ul>
               <li>
                 <a href="#">HOME</a>
               </li>
